try to solve transform bug on ios

--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,6 @@ body,
 
 .animated_card.visible {
   opacity: 1;
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
 }
